@@ -1,5 +1,9 @@
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* cvscommit.sh: Add |-I| option to the |perl| command.
+
+2008-10-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* cvscommit.sh: Add a line to invoke |mkcommitfeed.pl|.
 
 	* mkcommitfeed.pl: New script.
